# datathons-time6

./: .gitignore  README.md  cpflpaulista-carga.xlsx  cpflpaulista-municipios.xlsx  main.ipynb  pyproject.toml  requirements.txt
municipios_sp/: municipios.csv
utils/: processar_distribuidoras.py  separar_distribuidora.py  split_regions.py
