[tool.poetry]
name = "datathons"
version = "0.1.0"
description = ""
authors = ["Rodrigo Muniz <rodrigosilvamuniz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.4.3"
pandas = "^1.4.3"
scipy = "^1.8.1"
plotly = "^5.9.0"
chart-studio = "^1.1.0"
ipywidgets = "^7.7.1"
matplotlib = "^3.5.2"
openpyxl = "^3.0.10"
sysidentpy = "^0.2.0"
torch = "^1.11.0"
numpy = "1.21.6"
sktime = "^0.12.0"
neuralprophet = {extras = ["live"], version = "^0.3.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
